- adiciona função para validar se o usuario esta autenticado ou não
- documenta novas rotas de autorizaçãõ
